--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -11,13 +11,14 @@ body{
 	margin: 5px 0;
 }
 .feature img{
-	width: 75%;
-	padding: 5px 0 5px 5px;
+	width: 100%;
+	padding: 5px 0 10px 10px;
 }
 .feature .col-xs-6 p{
 	font-size: 13px;
-	padding: 10px 10px 0;
+	padding: 10px 20px 0;
 }
+
 .day{
 	font-size: 13px;
        padding: 0px 10px ;
@@ -35,6 +36,7 @@ body{
 	padding-bottom: 10px;
 }
 .text p{
+	font-size: 13px;
 	padding: 0px 10px;
 }
 button{
