--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,42 +13,55 @@
 	<div class="row feature">
 		<% (1..2) .each do |child_index|%>
 		<div class="col-xs-6">
+			<a href="<%=@child_name["#{child_index}"][:link]%>">
 			<div class="shadow">
 				<div class="row">
-					<div class="col-xs-6">
-						<a href="views/child/ccold.html"><%= image_tag "child_#{child_index}.png",class:""%></a>
+					<div class="col-xs-4 no-padding">
+						<%= image_tag "child_#{child_index}.png",class:""%>
 					</div>
-					<div class="col-xs-6">
-						<p style="color:white"><%=@child_name["#{child_index}"]%></p>
+					<div class="col-xs-1 no-padding">
+						<span class="glyphicon glyphicon-search" aria-hidden="true" ></span>
+					</div>	
+					<div class="col-xs-7 ">
+						<p style="color:white"><%=@child_name["#{child_index}"][:word]%></p>
 					</div>	
 				</div>
 				<%=render partial:"share/butn.html.erb"%>
 			</div>
+			</a>
 		</div>
-		<% end %>
-		
+		<% end %>	
 	</div>
+
 	<div class="row feature">
 		<div class="col-xs-6">
+		<%= link_to child_ccold_path do |i| %>
 			<div class="shadow">
 				<div class="row">
-					<div class="col-xs-6">
+					<div class="col-xs-4 no-padding">
 						<%= image_tag "adult_cold.png"%>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-1 no-padding">
+						<span class="glyphicon glyphicon-search" aria-hidden="true" ></span>
+					</div>	
+					<div class="col-xs-7">
 						<p style="color:white">成人感冒气象风险</p>
 					</div>
 				</div>
 				<%=render partial:"share/butn.html.erb"%>
 			</div>
+			<% end %>
 		</div>
 		<div class="col-xs-6">
 			<div class="shadow">
 				<div class="row">
-					<div class="col-xs-6">
+					<div class="col-xs-4 no-padding">
 						<%= image_tag "old_cold.png"%>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-1 no-padding">
+						<span class="glyphicon glyphicon-search" aria-hidden="true" ></span>
+					</div>	
+					<div class="col-xs-7">
 						<p style="color:white">老人感冒气象风险</p>
 					</div>
 				</div>
@@ -60,10 +73,13 @@
 		<div class="col-xs-6">
 			<div class="shadow">
 				<div class="row">
-					<div class="col-xs-6">
+					<div class="col-xs-4 no-padding">
 						<%= image_tag "lung_disease.png"%>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-1 no-padding">
+						<span class="glyphicon glyphicon-search" aria-hidden="true" ></span>
+					</div>	
+					<div class="col-xs-7">
 						<p style="color:white">慢性阻塞性肺病气象风险</p>
 					</div>
 				</div>
